# k8s-watchdog-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  argocd-app.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: release.yml
cmd/observer/: main.go
helm/: .helmignore  Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  image-pull-secret.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  vault-auth.yaml  vault-connection.yaml  vault-static-secret.yaml
helm/values/: prod.yaml
internal/analyzer/: analyzer.go  prompts.go
internal/collector/: collector.go  events.go  nodes.go  pods.go
internal/config/: config.go
internal/pdfgen/: htmlpdf.go  pdfgen.go
internal/reporter/: formatter.go  reporter.go
internal/scheduler/: scheduler.go
internal/storage/: migrations.go  models.go  storage.go
manifests/: configmap.yaml  deployment.yaml  pvc.yaml  rbac.yaml  secret.yaml
manifests/k8s-mcp-server/: deployment.yaml  rbac.yaml  service.yaml
manifests/prometheus-mcp-server/: deployment.yaml  service.yaml
manifests/watchdog-ai/: configmap.yaml  cronjob-trigger.yaml  cronjob.yaml  pvc.yaml  secret.yaml
src/: __init__.py  config.py  main.py
src/jobs/: __init__.py  processors.py  queue.py  worker.py
src/orchestrator/: __init__.py  agent.py  prompts.py
src/reporter/: __init__.py  slack.py
src/storage/: __init__.py  reports.py
src/tools/: kubernetes.py  mcp_kubernetes.py  mcp_prometheus.py  prometheus.py
